--- a/base/templates/base/lobby.html
+++ b/base/templates/base/lobby.html
@@ -12,11 +12,11 @@
         </div>
         <form action="" id="form">
             <div class="form-field">
-                <input type="text" style="text-transform: uppercase;" name="room" id="" placeholder="Enter Room Name">
+                <input type="text" style="text-transform: uppercase;" name="room" id="" placeholder="Enter Room Name" required>
             </div>
             <div class="form-field">
                 <input type="text" style="text-transform: uppercase;" name="username" id=""
-                    placeholder="Enter Your Name">
+                    placeholder="Enter Your Name" required>
             </div>
             <div class="form-field">
                 <input type="submit" value="Join Stream" name="" id="">
