--- a/base/templates/base/lobby.html
+++ b/base/templates/base/lobby.html
@@ -12,10 +12,10 @@
         </div>
         <form action="" id="form">
             <div class="form-field">
-                <input type="text" style="text-transform: uppercase;" name="room" id="" placeholder="Enter Room Name">
+                <input required type="text" style="text-transform: uppercase;" name="room" id="" placeholder="Enter Room Name">
             </div>
             <div class="form-field">
-                <input type="text" style="text-transform: uppercase;" name="username" id=""
+                <input required type="text" style="text-transform: uppercase;" name="username" id=""
                     placeholder="Enter Your Name">
             </div>
             <div class="form-field">
